v3: JavaFX setup, start screen working